--- a/TourismLease-RepertoryService-8000/pom.xml
+++ b/TourismLease-RepertoryService-8000/pom.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>all.doo</groupId>
         <artifactId>SpringCloudTourismLease</artifactId>
+        <groupId>all.doo</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
+    <modelVersion>4.0.0</modelVersion>
+
     <groupId>cn.doo</groupId>
-    <artifactId>repertory</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>repertory</name>
-    <description>Demo project for Spring Boot</description>
+    <artifactId>TourismLease-RepertoryService-8000</artifactId>
+
     <properties>
         <java.version>1.8</java.version>
     </properties>
