--- a/TourismLease-RepertoryFeign/pom.xml
+++ b/TourismLease-RepertoryFeign/pom.xml
@@ -9,8 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.rj.bd</groupId>
-    <artifactId>TourismLease-PersonnelFeign-8011</artifactId>
+    <groupId>cn.doo</groupId>
+    <artifactId>TourismLease-RepertoryFeign</artifactId>
 
     <properties>
         <java.version>1.8</java.version>
