添加采购模块&修改网关

--- a/zuul80/src/main/resources/application.yml
+++ b/zuul80/src/main/resources/application.yml
@@ -44,6 +44,9 @@ zuul:
     TourismLease-PersonnelService:
       service-id: TourismLease-PersonnelService
       path: /api/personnel/**
+    TourismLease-ProcurementService:
+      service-id: TourismLease-ProcurementService
+      path: /api/procurement/**
     TourismLease-LeaseService:
       service-id: TourismLease-LeaseService
       path: /api/**
