--- a/TourismLease-PersonnelService-8010/pom.xml
+++ b/TourismLease-PersonnelService-8010/pom.xml
@@ -110,6 +110,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-commons</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.doo</groupId>
+            <artifactId>TourismLease-RepertoryFeign</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
