集合kafka 发送邮件

--- a/TourismLease-LeaseService-8002/pom.xml
+++ b/TourismLease-LeaseService-8002/pom.xml
@@ -97,6 +97,22 @@
             <artifactId>BasicModule</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>cn.doo</groupId>
+            <artifactId>TourismLease-KafkaFegin</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.rj.bd</groupId>
+            <artifactId>TourismLease-PersonnelFeign</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.2</version>
+        </dependency>
     </dependencies>
 
 </project>
