--- a/TourismLease-LoginService-8012/pom.xml
+++ b/TourismLease-LoginService-8012/pom.xml
@@ -16,6 +16,7 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -59,6 +60,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+
         <!--5.ribbon(fegin要想使用必须要有ribbon)-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -80,6 +82,12 @@
         <dependency>
             <groupId>com.rj.bd</groupId>
             <artifactId>TourismLease-PersonnelFeign</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.doo</groupId>
+            <artifactId>TourismLease-KafkaFegin</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
