--- a/TourismLease-PersonnelService-8010/pom.xml
+++ b/TourismLease-PersonnelService-8010/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>BasicModule</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>cn.doo</groupId>
+            <artifactId>TourismLease-KafkaFegin</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!--Hystrix-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
